<resources>
    <string name="app_name">ArtEst</string>

    <string name="facebook_app_id">531313324376118</string>
    <string name="fb_login_protocol_scheme">fb531313324376118</string>

    <!-- Login Page Strings -->
    <string name="login_header">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_up_message">New Here? Sign Up</string>

    <!-- Register Page Strings -->
    <string name="register_header">Hey There</string>
    <string name="sign_up">Get Started</string>
    <string name="sign_in_message">Have an account? Sign In</string>

    <string name="step_one">Basic Details</string>
    <string name="step_two">Music Preferences</string>
    <string name="step_three">Dates and Timing</string>

    <string name="content_desc_progress">Progress Indicator</string>

    <!-- Form Strings -->
    <string name="option_head">Are you a musician or an establishment?</string>
    <string name="option_music">I am a musician</string>
    <string name="option_est">We are an Establishment</string>
    <string name="desc_head">Tell us Something about yourself</string>
    <string name="desc_hint">I am a/We are a&#8230;</string>

    <string name="type_head">Select the Genres of Music you\'d most like</string>
    <string name="instrument_head">Pick the Musical Instrument you\'re most comfortable with</string>
    <string name="band_head">Would you like to host a band at your premises?</string>

    <string name="option_rock">Rock and Roll</string>
    <string name="option_blues">Blues</string>
    <string name="option_jazz">Jazz</string>
    <string name="option_pop">Pop</string>

    <string name="time_head">Which Time Slot do you have free?</string>
    <string name="day_head">Select days of the week for which you require the app</string>

    <string name="option_monday">Monday</string>
    <string name="option_tuesday">Tuesday</string>
    <string name="option_wednesday">Wednesday</string>
    <string name="option_thursday">Thursday</string>
    <string name="option_friday">Friday</string>
    <string name="option_saturday">Saturday</string>
    <string name="option_sunday">Sunday</string>

    <string name="start_head">Start Time:</string>
    <string name="end_head">End Time:</string>

    <string name="next">Next</string>

    <!-- Profile Page Strings -->
    <string name="content_desc_cover">Cover Photo</string>
    <string name="content_desc_profile">Profile Photo</string>
    <string name="btn_message">Message</string>

    <string name="gigs_title">Gigs</string>
    <string name="rating_title">Rating</string>
    <string name="recent_gigs">Recent Gigs</string>

    <string name="name_placeholder">Music Man</string>
    <string name="place_placeholder">Delhi, India</string>
    <string name="chip_instrument_placeholder">Guitarist</string>
    <string name="chip_vocalist_placeholder">Vocalist</string>
    <string name="chip_band_placeholder">Plays in a Band</string>
    <string name="gigs_placeholder">18</string>
    <string name="rating_placeholder">4.7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Homepage Strings -->
    <string name="welcome">Welcome Back</string>
    <string name="byline">Good Day to find new musical places</string>
    <string name="hint">Search for Establishments</string>
    <string name="picked_title">Picked for you</string>
    <string name="recent_title">Recently played at</string>

    <string name="content_desc_est">Establishment Image</string>
    <string name="est_name_placeholder">[Establishment Name]</string>
    <string name="est_loc_placeholder">[Establishment Location]</string>
</resources>
