<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDayHead"
            android:text="@string/day_head"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:id="@+id/ctvMonday"
            android:text="@string/option_monday"
            android:checked="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckedTextView
            android:id="@+id/ctvTuesday"
            android:text="@string/option_tuesday"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckedTextView
            android:id="@+id/ctvWednesday"
            android:text="@string/option_wednesday"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckedTextView
            android:id="@+id/ctvThursday"
            android:text="@string/option_thursday"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckedTextView
            android:id="@+id/ctvFriday"
            android:text="@string/option_friday"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckedTextView
            android:id="@+id/ctvSaturday"
            android:text="@string/option_saturday"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckedTextView
            android:id="@+id/ctvSunday"
            android:text="@string/option_sunday"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTimeHead"
            android:text="@string/time_head"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvStartHead"
            android:text="@string/start_head"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TimePicker
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvEndHead"
            android:text="@string/start_head"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TimePicker
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>