<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTypeHead"
        android:text="@string/type_head"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckedTextView
        android:id="@+id/ctvRock"
        android:text="@string/option_rock"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckedTextView
        android:id="@+id/ctvBlues"
        android:text="@string/option_blues"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckedTextView
        android:id="@+id/ctvJazz"
        android:text="@string/option_jazz"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckedTextView
        android:id="@+id/ctvPop"
        android:text="@string/option_pop"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/instrumentLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvInstrumentHead"
            android:text="@string/instrument_head"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bandLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBandHead"
            android:text="@string/band_head"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>