<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvOptionHead"
        android:text="@string/option_head"
        android:textSize="18sp"
        android:textColor="?android:textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroupOption"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/optionMusician"
            android:text="@string/option_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/optionEst"
            android:text="@string/option_est"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvDescriptionHead"
        android:text="@string/desc_head"
        android:textSize="18sp"
        android:textColor="?android:textColorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDescription"
        android:hint="@string/desc_hint"
        android:inputType="text"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

    <Button
        android:id="@+id/btnNext"
        android:text="@string/next"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored" />

</LinearLayout>