<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homescreen.MusicianHomepageFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvByline"
        android:text="@string/byline"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="@id/tvWelcome" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivProfile"
        android:src="@drawable/musician1"
        android:layout_marginEnd="16dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/content_desc_profile"
        app:layout_constraintTop_toTopOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        app:iconifiedByDefault="false"
        app:queryHint="@string/hint"
        app:defaultQueryHint="@string/hint"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvByline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPickedTitle"
        android:text="@string/picked_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPickedList"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:layout_constraintTop_toBottomOf="@id/tvPickedTitle" />

    <TextView
        android:id="@+id/tvRecentList"
        android:text="@string/recent_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rvPickedList"
        app:layout_constraintStart_toStartOf="@id/tvPickedTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecentList"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRecentList" />

</androidx.constraintlayout.widget.ConstraintLayout>