<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:background="@drawable/label"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="-184dp"
            android:layout_marginStart="-64dp"
            android:layout_width="364dp"
            android:layout_height="364dp" />
        <View
            android:background="@drawable/label"
            android:layout_marginTop="-184dp"
            android:layout_marginStart="-72dp"
            android:layout_width="364dp"
            android:layout_height="364dp" />

        <TextView
            android:text="@string/login_header"
            android:textColor="?android:textColorPrimary"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MinorProject.Headline1" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:labelFor="@+id/etEmail"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:labelFor="@+id/etPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/sign_in"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored" />

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="#EBEBEB"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="1dp" />

        <TextView
            android:text="@string/or"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <View
            android:background="#EBEBEB"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="1dp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/facebook_logo"
            android:backgroundTint="#1975F3"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/google_logo"
            android:backgroundTint="#EEEEEE"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="@string/sign_up_message"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>